fix: top left page counter overflow fixed

--- a/src/renderer/components/Page/Toolbar/Toolbar.scss
+++ b/src/renderer/components/Page/Toolbar/Toolbar.scss
@@ -73,8 +73,8 @@ input[type=range] {
   display: inline-block;
   width: 0;
   padding: none;
-  margin-left: 0.2rem;
-  margin-right: 0.2rem;
+  margin-left: 0.3rem;
+  margin-right: 0.3rem;
   vertical-align: middle;
   height: 75%;
 }
